<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_category"
        android:enabled="true"
        android:icon="@drawable/ic_category"
        android:title="@string/onglet_category"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_operation"
        android:enabled="true"
        android:icon="@drawable/ic_shop"
        android:title="@string/onglet_operation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_inventory"
        android:enabled="true"
        android:icon="@drawable/ic_invent"
        android:title="@string/onglet_inventory"
        app:showAsAction="ifRoom" />
</menu>