<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewProductFragment">

    <!-- TODO: Update blank fragment layout -->


    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/nouveau_produit"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />


    <EditText
        android:id="@+id/nameproduct"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:background="#E8E4E4"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/categorieproduct"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="#E8E4E4"
        android:paddingStart="10dp"
        android:ems="10"
        android:hint="@string/categorie"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameproduct" />

    <EditText
        android:id="@+id/priceproduct"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:paddingStart="10dp"
        android:background="#E8E4E4"
        android:ems="10"
        android:hint="@string/prix_d_achat"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />


    <EditText
        android:id="@+id/quantityproduct"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="#E8E4E4"
        android:paddingStart="10dp"
        android:ems="10"
        android:hint="@string/quantite"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorieproduct" />

    <EditText
        android:id="@+id/dateproduct"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:background="#E8E4E4"
        android:paddingStart="10dp"
        android:ems="10"
        android:hint="@string/date_de_peremption"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityproduct" />

    <Button
        android:id="@+id/saveproduct"
        android:layout_width="363dp"
        android:layout_height="46dp"
        android:background="@drawable/contour"
        android:text="@string/ajouter"
        android:textColor="@color/colorWhite"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateproduct"
        app:layout_constraintVertical_bias="0.361" />
</androidx.constraintlayout.widget.ConstraintLayout>