<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BienvenueActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="254dp"
        android:layout_height="336dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_supermarket_workers_amico"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/svgsupermarket" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="81dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/descriptionapp"
        android:textColor="#1E1D1D"
        android:textSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="197dp"
        android:layout_height="47dp"
        android:background="@drawable/contour"
        android:text="@string/titlestartbutton"
        app:backgroundTint="#2979FF"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.237" />

</androidx.constraintlayout.widget.ConstraintLayout>